best-practices/ml-platform/examples/platform/playground/templates/configsync/templates/_cluster_template/team/network-policy.yaml
# Copyright 2024 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: NAMESPACE
  namespace: NAMESPACE
spec:
  podSelector:
    # Apply policy to all pods in this namespace.
    matchLabels: {}
  policyTypes:
  - Ingress
  ingress:
  - from:
    # Allow GCLBs
    - ipBlock:
        cidr: 35.191.0.0/16
    - ipBlock:
        cidr: 130.211.0.0/22
    # Allow managed Prometheus collector
    - namespaceSelector:
        matchLabels:
           kubernetes.io/metadata.name: gmp-system
      podSelector:
        matchLabels:
          app: managed-prometheus-collector
    # Allow traffic between all pods in this namespace.
    - podSelector: {}
